[tool.poetry]
name = "deeplabv3plus-pytorch"
version = "0.1.0"
description = ""
authors = ["Ian Benlolo <28714744+ianbenlolo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
